[project]
name = "sample"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Yuki Nakajima", email = "yuki.nakajima@revcomm.co.jp" }
]
dependencies = [
    "fastapi>=0.112.0",
    "uvicorn>=0.30.6",
    "ruff>=0.5.7",
]
readme = "README.md"
requires-python = ">= 3.11.3"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/sample"]
